--- a/CrisisApplication/Views/Shared/_BasicLayout.cshtml
+++ b/CrisisApplication/Views/Shared/_BasicLayout.cshtml
@@ -9,23 +9,13 @@
     <link href="~/lib/bootstrap-4.0.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/css/site.css" rel="stylesheet" />
 </head>
-<body class="bg-light">
+<body >
   
-
-    <div class="container">
-
-        <div class="py-5 text-center">
-            <h2>Centennial College Crisis Management System</h2>
-            <p class="lead">Lorem Ipsum Dolor... Description here</p>
-        </div>
-
         <div class="row">
             <div class="col-md-12">
                 @RenderBody()
             </div>
         </div>
-
-    </div>
 
 </body>
 </html>
