--- a/CrisisApplication/Views/_ViewImports.cshtml
+++ b/CrisisApplication/Views/_ViewImports.cshtml
@@ -1,2 +1,3 @@
 ﻿@using CrisisApplication.Models
+@using CrisisApplication.Models.ViewsModels;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
