--- a/CrisisApplication/wwwroot/css/site.css
+++ b/CrisisApplication/wwwroot/css/site.css
@@ -48,3 +48,48 @@ body {
     margin-left: 50px;
 }
 
+/*Sign In Sign Up page*/
+.container {
+    height: 100%;
+    align-content: center;
+}
+
+.card {
+    height: 450px;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 450px;
+    background-color: 1px solid #f8f9fa;
+}
+
+.input-group-prepend span {
+    width: 50px;
+    background-color: #FFC312;
+    color: black;
+    border: 0 !important;
+}
+
+input:focus {
+    outline: 0 0 0 0 !important;
+    box-shadow: 0 0 0 0 !important;
+}
+
+.login_btn {
+    color: white;
+    width: 100px;
+    background-color: #007bff;
+}
+
+    .login_btn:hover {
+        color: black;
+        background-color: white;
+    }
+
+.links a {
+    color: #ffc107;
+}
+
+.links a {
+    margin-left: 4px;
+}
+
