--- a/CrisisApplication/Views/Contact/Contactresponseconfrm.cshtml
+++ b/CrisisApplication/Views/Contact/Contactresponseconfrm.cshtml
@@ -4,7 +4,7 @@
     <p class="lead"><strong>Your response has been recorded.</strong> </p>
     <hr>
     <p>
-        Having trouble? <p> Contact us info@crisimanager.ca</p>
+        Having trouble? <p> Contact us at ssadiq1@my.centennialcollege.ca</p>
 
 
     <p class="lead">
