--- a/CrisisApplication/Views/CrisisManager/ViewStatus.cshtml
+++ b/CrisisApplication/Views/CrisisManager/ViewStatus.cshtml
@@ -16,27 +16,7 @@
 <body>
 
     <div class="container">
-        <div class="header clearfix">
-            <nav>
-                <ul class="nav nav-pills float-right">
-                    <li class="nav-item">
-                        <a class="nav-link" asp-action="CrisisManagerHome" asp-controller="CrisisManager">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" asp-action="ViewContacts" asp-controller="CrisisManager">Contacts</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" asp-action="Alert" asp-controller="CrisisManager">Alert</a>
-                    </li>
-                    <li class="nav-item">
-
-                        <a class="nav-link active" asp-action="ViewStatus" asp-controller="CrisisManager">Status</a>
-
-                    </li>
-                </ul>
-            </nav>
-            <h3 class="text-muted">Crisis Manager</h3>
-        </div>
+        <partial name="CMNav_Partial.cshtml" />
 
         <div class="jumbotron">
             <h1 class="display-3">Status</h1>
