Moved CMNavbar to Shared Set all CM views to use _CMNavLayout

--- a/CrisisApplication/Views/CrisisManager/CrisisManagerHome.cshtml
+++ b/CrisisApplication/Views/CrisisManager/CrisisManagerHome.cshtml
@@ -1,30 +1,12 @@
-﻿<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Centennial Crisis Management System</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="~/css/site.css" rel="stylesheet" />
-
-    <!-- Custom styles for this template -->
-    <link href="~/css/jumbotron-narrow.css" rel="stylesheet" />
-</head>
+﻿@{
+    Layout = "_CMNavLayout";
+ }
 
 <body>
-
-    <div class="container">
-        <partial name="CMNav_Partial.cshtml"/>
-
-
-
+    
+        
         <div class="row marketing">
             <div class="col-lg-6">
-
-
-
                 <h4>Contacts</h4>
                 <p>As a crisis manager, you can edit and delete contacts of the members of Centennial College.</p>
 
@@ -44,11 +26,7 @@
             </div>
         </div>
 
-        <footer class="footer">
-            <p contenteditable="true" spellcheckker="false">Centennial Crisis Management System</p>
-        </footer>
-
-    </div> <!-- /container -->
+        
 
 
 </body>
