--- a/CrisisApplication/Views/Event/Index.cshtml
+++ b/CrisisApplication/Views/Event/Index.cshtml
@@ -2,10 +2,11 @@
 
 @{
     ViewBag.Title = "Centennial College Crisis Alert";
+    Layout = "_CMNavLayout";
 }
 
- 
-        <div>
+
+    <div>
 
         @if (TempData["message"] != null)
         {
@@ -16,6 +17,7 @@
         <div>
             <p>Shows list of events</p>
         </div>
+        <a asp-action="AddEvent" asp-controller="Event" class="btn btn-danger float-right">Create an Event</a>
 
         <div class="table-responsive-sm">
             <table class="table table-striped table-bordered">
@@ -36,9 +38,6 @@
                         </tr>
                     }
                 </tbody>
-
             </table>
-            <a asp-action="AddEvent" asp-controller="Event" class="btn btn-danger float-right">Create an Event</a>
         </div>
-
     </div>
