Email sending now working

--- a/CrisisApplication/Views/Event/EventDetails.cshtml
+++ b/CrisisApplication/Views/Event/EventDetails.cshtml
@@ -28,6 +28,12 @@
                        asp-route-eventID="@Model.EventID">
                         Delete
                     </a>
+                    <a asp-action="FireEvent" class="btn btn-danger btn-sm"
+                       asp-route-eventID="@Model.EventID">
+                        Activate Alerts for Event
+                    </a>
+
+
                 </form>
             </td>
         </tr>
