App enhancement and cleanup for Release 1.0 (#17)
* Correct login goes to Crisis Manager Page

* CMgr Alert -> Event
CMgr Navigation moved to partial view

* Moved CMNavbar to Shared
Set all CM views to use _CMNavLayout

* Signed in as correct gihubacc
Contact Model added
Commit before db migration

* Email sending now working

* Email being sent and recieved
Notification connection still required

Co-authored-by: WalterCorbitt <46976605+WalterCorbitt@users.noreply.github.com>

--- a/CrisisApplication/Views/CrisisManager/CrisisManagerHome.cshtml
+++ b/CrisisApplication/Views/CrisisManager/CrisisManagerHome.cshtml
@@ -1,48 +1,12 @@
-﻿<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Centennial Crisis Management System</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="~/css/site.css" rel="stylesheet" />
-
-    <!-- Custom styles for this template -->
-    <link href="~/css/jumbotron-narrow.css" rel="stylesheet" />
-</head>
+﻿@{
+    Layout = "_CMNavLayout";
+ }
 
 <body>
-
-    <div class="container">
-        <div class="header clearfix">
-            <nav>
-                <ul class="nav nav-pills float-right">
-                    <li class="nav-item">
-                        <a class="nav-link active" asp-action="CrisisManagerHome" asp-controller="CrisisManager">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" asp-action="ViewContacts" asp-controller="CrisisManager">Contacts</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" asp-action="Alert" asp-controller="CrisisManager">Alert</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" asp-action="ViewStatus" asp-controller="CrisisManager">Status</a>
-                    </li>
-                </ul>
-            </nav>
-            <h3 class="text-muted">Crisis Manager</h3>
-        </div>
-
-
-
+    
+        
         <div class="row marketing">
             <div class="col-lg-6">
-
-
-
                 <h4>Contacts</h4>
                 <p>As a crisis manager, you can edit and delete contacts of the members of Centennial College.</p>
 
@@ -62,11 +26,7 @@
             </div>
         </div>
 
-        <footer class="footer">
-            <p contenteditable="true" spellcheckker="false">Centennial Crisis Management System</p>
-        </footer>
-
-    </div> <!-- /container -->
+        
 
 
 </body>
