--- a/CrisisApplication/Views/CrisisManager/ViewStatus.cshtml
+++ b/CrisisApplication/Views/CrisisManager/ViewStatus.cshtml
@@ -1,58 +1,11 @@
-﻿<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Centennial Crisis Management System</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="~/css/site.css" rel="stylesheet" />
-
-    <!-- Custom styles for this template -->
-    <link href="~/css/jumbotron-narrow.css" rel="stylesheet" />
-</head>
+﻿@{
+    Layout = "_CMNavLayout";
+}
 
 <body>
-
-    <div class="container">
-        <div class="header clearfix">
-            <nav>
-                <ul class="nav nav-pills float-right">
-                    <li class="nav-item">
-                        <a class="nav-link" asp-action="CrisisManagerHome" asp-controller="CrisisManager">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" asp-action="ViewContacts" asp-controller="CrisisManager">Contacts</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" asp-action="Alert" asp-controller="CrisisManager">Alert</a>
-                    </li>
-                    <li class="nav-item">
-
-                        <a class="nav-link active" asp-action="ViewStatus" asp-controller="CrisisManager">Status</a>
-
-                    </li>
-                </ul>
-            </nav>
-            <h3 class="text-muted">Crisis Manager</h3>
-        </div>
-
-        <div class="jumbotron">
-            <h1 class="display-3">Status</h1>
-            <p class="lead"></p><div class="form-group" style="">View the status of contacts as safe and unsafe.</div><div class="form-group" style=""></div><p></p>
-            <p></p><table class="table" style="">		  <thead>			<tr>			  			  			  <th>Safe</th>			  <th>Unsafe</th>			</tr>		  </thead>		  <tbody>			<tr>			  <th scope="row">70%</th>			  <td><b>30%</b></td>			  			  			</tr>			<tr>			  			  			  			  			</tr>			<tr>			  			  			  			  			</tr>		  </tbody>		</table><p></p>
-        </div>
-
-        <div class="row marketing">
-
-
-
-        </div>
-
-        <footer class="footer">
-            <p>Centennial Crisis Management System</p>
-        </footer>
-
-    </div> <!-- /container -->
+    <div class="jumbotron">
+        <h1 class="display-3">Status</h1>
+        <p class="lead"></p><div class="form-group" style="">View the status of contacts as safe and unsafe.</div><div class="form-group" style=""></div><p></p>
+        <p></p><table class="table" style="">		  <thead>			<tr>			  			  			  <th>Safe</th>			  <th>Unsafe</th>			</tr>		  </thead>		  <tbody>			<tr>			  <th scope="row">70%</th>			  <td><b>30%</b></td>			  			  			</tr>			<tr>			  			  			  			  			</tr>			<tr>			  			  			  			  			</tr>		  </tbody>		</table><p></p>
+    </div>
 </body>
