--- a/CrisisApplication/Views/Shared/_CMNavbar.cshtml
+++ b/CrisisApplication/Views/Shared/_CMNavbar.cshtml
@@ -2,7 +2,7 @@
     <nav>
         <ul class="nav nav-pills float-right">
             <li class="nav-item">
-                <a class="nav-link active" asp-action="CrisisManagerHome" asp-controller="CrisisManager">Home</a>
+                <a class="nav-link" asp-action="CrisisManagerHome" asp-controller="CrisisManager">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" asp-action="ViewContacts" asp-controller="CrisisManager">Contacts</a>
