--- a/CrisisApplication/Views/Response/ResponseUi.cshtml
+++ b/CrisisApplication/Views/Response/ResponseUi.cshtml
@@ -1,12 +1,24 @@
 ﻿@model Response
 @{
     ViewData["Title"] = "SubmitResponse";
+    Layout = "_ContactLayout";
 }
+
 <form asp-action="SaveResponse" method="post">
     <div class="form-group row">
         <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
         <div class="col-sm-10">
-            <input type="email" asp-for="Email" class="form-control" placeholder="Email">
+            @{
+                if (Model.Email != "")
+                {
+                    <input type="email" asp-for="Email" class="form-control" value="@Model.Email">
+                }
+                else
+                {
+                    <input type="email" asp-for="Email" class="form-control" placeholder="Email">
+                }
+            }
+
         </div>
     </div>
     <fieldset class="form-group">
