Added Respondents repo Commit prior to Migration

--- a/CrisisApplication/Views/Event/EventDetails.cshtml
+++ b/CrisisApplication/Views/Event/EventDetails.cshtml
@@ -51,6 +51,11 @@
                 <th>Description</th>
                 <td>@Model.EventDescr</td>
             </tr>
+            <tr>
+                <th>Respondent Information</th>
+                <td>@Model.RespondentMetaInfo</td>
+            </tr>
+            
         </table>
     </div>
 
