--- a/CrisisApplication/Views/Event/EditEvent.cshtml
+++ b/CrisisApplication/Views/Event/EditEvent.cshtml
@@ -2,7 +2,6 @@
 @model Event
 @{
     ViewBag.Title = "Edit Event";
-    Layout = "_CMNavLayout";
 }
 
 <h4>Edit Event</h4>
@@ -16,7 +15,7 @@
     <form asp-action="Edit" method="post">
         <input type="hidden" asp-for="EventID" />
 
-        <partial name="_EventPartial" />
+        @Html.Partial("EventPartial")
 
         <button type="submit" class="btn btn-danger">Save</button>
         <button asp-action="Index" asp-controller="Event" class="btn btn-danger">Cancel</button>
