--- a/CrisisApplication/Views/CrisisManager/Alert.cshtml
+++ b/CrisisApplication/Views/CrisisManager/Alert.cshtml
@@ -26,12 +26,11 @@
                         <a class="nav-link" asp-action="ViewContacts" asp-controller="CrisisManager">Contacts</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-action="Alert" asp-controller="CrisisManager">Alert</a>
+
+                        <a class="nav-link active" asp-action="Alert" asp-controller="CrisisManager">Alert</a>
                     </li>
                     <li class="nav-item">
-
-                        <a class="nav-link active" asp-action="ViewStatus" asp-controller="CrisisManager">Status</a>
-
+                        <a class="nav-link" asp-action="ViewStatus" asp-controller="CrisisManager">Status</a>
                     </li>
                 </ul>
             </nav>
@@ -39,9 +38,9 @@
         </div>
 
         <div class="jumbotron">
-            <h1 class="display-3">Status</h1>
-            <p class="lead"></p><div class="form-group" style="">View the status of contacts as safe and unsafe.</div><div class="form-group" style=""></div><p></p>
-            <p></p><table class="table" style="">		  <thead>			<tr>			  			  			  <th>Safe</th>			  <th>Unsafe</th>			</tr>		  </thead>		  <tbody>			<tr>			  <th scope="row">70%</th>			  <td><b>30%</b></td>			  			  			</tr>			<tr>			  			  			  			  			</tr>			<tr>			  			  			  			  			</tr>		  </tbody>		</table><p></p>
+            <h1 class="display-3">Send Alert</h1>
+            <p class="lead"><div class="form-group" style="">Compose the alert in the text box given below.</div><div class="form-group" style=""><textarea class="form-control"></textarea></div></p>
+            <p><a class="btn btn-lg btn-success" href="#" role="button">Send</a></p>
         </div>
 
         <div class="row marketing">
@@ -55,4 +54,6 @@
         </footer>
 
     </div> <!-- /container -->
+
+
 </body>
