--- a/CrisisApplication/Views/CrisisManager/ViewStatus.cshtml
+++ b/CrisisApplication/Views/CrisisManager/ViewStatus.cshtml
@@ -1,11 +1,38 @@
-﻿@{
-    Layout = "_CMNavLayout";
-}
+﻿<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Centennial Crisis Management System</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="~/css/site.css" rel="stylesheet" />
+
+    <!-- Custom styles for this template -->
+    <link href="~/css/jumbotron-narrow.css" rel="stylesheet" />
+</head>
 
 <body>
-    <div class="jumbotron">
-        <h1 class="display-3">Status</h1>
-        <p class="lead"></p><div class="form-group" style="">View the status of contacts as safe and unsafe.</div><div class="form-group" style=""></div><p></p>
-        <p></p><table class="table" style="">		  <thead>			<tr>			  			  			  <th>Safe</th>			  <th>Unsafe</th>			</tr>		  </thead>		  <tbody>			<tr>			  <th scope="row">70%</th>			  <td><b>30%</b></td>			  			  			</tr>			<tr>			  			  			  			  			</tr>			<tr>			  			  			  			  			</tr>		  </tbody>		</table><p></p>
-    </div>
+
+    <div class="container">
+        <partial name="CMNav_Partial.cshtml" />
+
+        <div class="jumbotron">
+            <h1 class="display-3">Status</h1>
+            <p class="lead"></p><div class="form-group" style="">View the status of contacts as safe and unsafe.</div><div class="form-group" style=""></div><p></p>
+            <p></p><table class="table" style="">		  <thead>			<tr>			  			  			  <th>Safe</th>			  <th>Unsafe</th>			</tr>		  </thead>		  <tbody>			<tr>			  <th scope="row">70%</th>			  <td><b>30%</b></td>			  			  			</tr>			<tr>			  			  			  			  			</tr>			<tr>			  			  			  			  			</tr>		  </tbody>		</table><p></p>
+        </div>
+
+        <div class="row marketing">
+
+
+
+        </div>
+
+        <footer class="footer">
+            <p>Centennial Crisis Management System</p>
+        </footer>
+
+    </div> <!-- /container -->
 </body>
