--- a/CrisisApplication/Views/CrisisManager/Alert.cshtml
+++ b/CrisisApplication/Views/CrisisManager/Alert.cshtml
@@ -20,15 +20,14 @@
             <nav>
                 <ul class="nav nav-pills float-right">
                     <li class="nav-item">
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" asp-action="CrisisManagerHome" asp-controller="CrisisManager">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" asp-action="ViewContacts" asp-controller="CrisisManager">Contacts</a>
+                        <a class="nav-link" asp-action="ViewContacts" asp-controller="CrisisManager">Contacts</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-action="Alert" asp-controller="CrisisManager">Alert</a>
+
+                        <a class="nav-link active" asp-action="Alert" asp-controller="CrisisManager">Alert</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" asp-action="ViewStatus" asp-controller="CrisisManager">Status</a>
@@ -39,9 +38,9 @@
         </div>
 
         <div class="jumbotron">
-            <h1 class="display-3">All Contacts</h1>
-            <p class="lead"></p><div class="form-group" style=""><table class="table" style="">		  <thead>			<tr>			  <th>#</th>			  <th>First Name</th>			  <th>Last Name</th>			  <th>Student ID</th>			</tr>		  </thead>		  <tbody>			<tr>			  <th scope="row">1</th>			  <td>Romi</td>			  <td>Syed</td>			  <td>301106901</td>			</tr>			<tr>			  <th scope="row">2</th>			  <td>Jacob</td>			  <td>Black</td>			  <td>301234567</td>			</tr>			<tr>			  <th scope="row">3</th>			  <td>Larry</td>			  <td>Page</td>			  <td>307654321</td>			</tr>		  </tbody>		</table></div><div class="form-group" style=""></div><p></p>
-            <p><a class="btn btn-lg btn-success" href="#" role="button">Edit Contacts</a></p>
+            <h1 class="display-3">Send Alert</h1>
+            <p class="lead"><div class="form-group" style="">Compose the alert in the text box given below.</div><div class="form-group" style=""><textarea class="form-control"></textarea></div></p>
+            <p><a class="btn btn-lg btn-success" href="#" role="button">Send</a></p>
         </div>
 
         <div class="row marketing">
@@ -58,4 +57,3 @@
 
 
 </body>
-</html>
