--- a/CrisisApplication/Views/Event/AddEvent.cshtml
+++ b/CrisisApplication/Views/Event/AddEvent.cshtml
@@ -2,7 +2,6 @@
 
 @{
     ViewBag.Title = "Centennial College Crisis Management System";
-    Layout = "_CMNavLayout";
 }
 
 
@@ -15,7 +14,8 @@
     <div>
         <form asp-action="Edit" method="post">
 
-            <partial name="_EventPartial" />            
+            @Html.Partial("EventPartial")
+
 
             <button type="submit" class="btn btn-danger">Save</button>
             <button asp-action="Index" asp-controller="Event" class="btn btn-danger">Cancel</button>
