Final Demo prep (#21)
* Correct login goes to Crisis Manager Page

* CMgr Alert -> Event
CMgr Navigation moved to partial view

* Moved CMNavbar to Shared
Set all CM views to use _CMNavLayout

* Signed in as correct gihubacc
Contact Model added
Commit before db migration

* Email sending now working

* Email being sent and recieved
Notification connection still required

* Email Response working - Report not available
Respondent created
Adding property in event to provide Respondents with info
Commit prior to Migration

* Added Respondents repo
Commit prior to Migration

* Moved email broadcast to Event Controller

* Responses  now register

Co-authored-by: WalterCorbitt <46976605+WalterCorbitt@users.noreply.github.com>

--- a/CrisisApplication/Views/Event/AddEvent.cshtml
+++ b/CrisisApplication/Views/Event/AddEvent.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Centennial College Crisis Management System";
+    Layout = "_CMNavLayout";
 }
 
 
@@ -14,8 +15,7 @@
     <div>
         <form asp-action="Edit" method="post">
 
-            @Html.Partial("EventPartial")
-
+            <partial name="_EventPartial" />            
 
             <button type="submit" class="btn btn-danger">Save</button>
             <button asp-action="Index" asp-controller="Event" class="btn btn-danger">Cancel</button>
