--- a/CrisisApplication/Views/Shared/RespondentEmail.cshtml
+++ b/CrisisApplication/Views/Shared/RespondentEmail.cshtml
@@ -1,21 +1,18 @@
-﻿<!DOCTYPE html>
+﻿@model Event
 
-<html>
 <head>
-    <meta name="viewport" content="width=device-width" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>@ViewBag.Title</title>
     <link href="~/lib/twitter-bootstrap/css/bootstrap.css" rel="stylesheet" />
     <link href="~/lib/bootstrap-4.0.0/dist/css/bootstrap.css" rel="stylesheet" />
     <link href="~/lib/bootstrap-4.0.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/css/jumbotron-narrow.css" rel="stylesheet" />
     <link href="~/css/site.css" rel="stylesheet" />
 </head>
-<body >  
-        <div class="row">
-            <div class="col-md-12">
-                
-                @RenderBody()
-            </div>
-        </div>
+<body>
+    <p>A Crisis Event Alert has been sent by Centennial Crisis Managment System</p>
+    <h3>@Model.EventName</h3>
+
 
 </body>
-</html>
